fix: 🐛 fix sidebar overlap with footer

--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ a:hover {
 
 .carousel-control-next-icon, .carousel-control-prev-icon {
     background-color: #A5A5A5;
+    border-radius: 4px;
 }
 
 .carousel-item img {
@@ -121,17 +122,20 @@ a:hover {
 
 .home-wrapper__sidebar {
     min-width: 275px;
-    max-height: 750px;
+    /* max-height: 750px; */
     background-color: var(--blue-color);
     color: #fff;
     margin-top: 24px;
-    margin-right: 24px;
-    border-radius: 24px;
+    /* margin-right: 24px; */
+    /* border-radius: 24px; */
     display: none;
     top: 0;
     right: 0;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     position: fixed;
+    height: calc(100% - 25px);
+    border-top-right-radius: 24px;
+    border-top-left-radius: 24px;
 }
 
 .home-wrapper__logo {
@@ -324,7 +328,7 @@ a:hover {
 
 .home-wrapper__main {
     background-color: #fff;
-    padding: 20px 23px;
+    padding: 20px 23px 50px;
     /* display: none; */
 }
 
@@ -744,6 +748,10 @@ a:hover {
     .home-wrapper__header--coutries {
         height: 35px;
         width: 100px;
+    }
+
+    .home-wrapper__main {
+        padding-bottom: 30px;
     }
 }
 
